--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,8 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background-color: white;
+  margin: 0;
+  padding: 0;
 }
 
 ul[class],
