--- a/src/style.css
+++ b/src/style.css
@@ -20,21 +20,54 @@
   color: #ffffff !important;
 }
 
+/* .ant-menu {
+  font-size: 14px !important;
+  font-weight: 400 !important;
+} */
+
+.ant-typography {
+  color: white;
+}
+
+.ant-typography a {
+  color: #faad14;
+}
+
 .ant-modal-content {
   overflow: auto;
   border-radius: 1rem;
-  background: rgba(255, 255, 255, 0.938);
+  /* background: rgba(255, 255, 255, 0.938); */
+  background: rgba(240, 248, 255, 0.1);
+  background: -moz-linear-gradient(
+    left,
+    rgba(240, 248, 255, 0.8) 0%,
+    rgba(240, 248, 255, 1) 50%,
+    rgba(240, 248, 255, 0.8) 100%
+  );
+  background: -webkit-linear-gradient(
+    left,
+    rgba(240, 248, 255, 0.8) 0%,
+    rgba(240, 248, 255, 1) 50%,
+    rgba(240, 248, 255, 0.6) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(240, 248, 255, 0.8) 0%,
+    rgba(240, 248, 255, 1) 50%,
+    rgba(240, 248, 255, 0.8) 100%
+  );
 }
 
 .ant-card {
   background: #6762e0 !important;
-  border-radius: 4px !important;
+  border-radius: 10px !important;
   border: none !important;
   color: yellow !important;
 }
 
 .ant-card-body {
   background: #6762e0 !important;
+  border-radius: 10px !important;
 }
 
 .ant-card-meta-title {
@@ -109,5 +142,9 @@
 }
 
 .ant-dropdown-menu {
-background-color: #ea2789 !important;
+  background-color: #ea2789 !important;
+}
+
+.ant-btn:hover {
+  transform: scale(1.05) !important;
 }
