--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,11 @@
   color: white !important;
   letter-spacing: 1px;
   font-family: Sora;
+  font-size: 13px !important;
+}
+
+.ant-card-meta-detail > div:not(:last-child) {
+  font-size: 13px !important;
 }
 
 .ant-card-actions {
