--- a/src/style.css
+++ b/src/style.css
@@ -10,14 +10,31 @@
 }
 
 .ant-menu-horizontal > .ant-menu-item-selected a {
-  color: #ffffff !important;
+  color: #1890ff !important;
 }
-.ant-menu-horizontal > .ant-menu-item a:hover {
-  color: #ffffff !important;
+
+.ant-menu-submenu-horizontal {
+  color: white !important;
+}
+
+.ant-menu-submenu-popup {
+  background-color: black !important;
+  opacity: 1;
+  border-radius: 12px !important;
+}
+
+.ant-menu-submenu-popup > .ant-menu {
+  background-color: black !important;
+  border-radius: 10px !important;
+  border-radius: 12px !important;
 }
 
 .ant-menu-item a {
   color: white !important;
+}
+
+.ant-menu-item-selected {
+  background: transparent !important;
 }
 
 .ant-typography {
@@ -28,9 +45,17 @@
   color: #faad14 !important;
 }
 
-.ant-modal-content {
-  overflow: auto !important;
-  border-radius: 1rem !important;
+.ant-steps-item {
+  margin: 6px 0 !important;
+}
+
+.ant-steps-item-title {
+  font-size: 20px !important;
+  color: white !important;
+}
+
+.ant-select-selector {
+  /* //background: transparent !important; */
   background: rgba(240, 248, 255, 0.1) !important;
   background: -moz-linear-gradient(
     left,
@@ -50,6 +75,38 @@
     rgba(240, 248, 255, 1) 50%,
     rgba(240, 248, 255, 0.8) 100%
   ) !important;
+}
+
+.ant-modal-content {
+  overflow: auto !important;
+  border-radius: 1rem !important;
+  background: rgba(240, 248, 255, 0.10) !important;
+  background: -moz-linear-gradient(
+    left,
+    rgba(240, 248, 255, 0.4) 0%,
+    rgba(240, 248, 255, 0.25) 50%,
+    rgba(240, 248, 255, 0.1) 100%
+  ) !important;
+  background: -webkit-linear-gradient(
+    left,
+    rgba(240, 248, 255, 0.4) 0%,
+    rgba(240, 248, 255, 0.25) 50%,
+    rgba(240, 248, 255, 0.1) 100%
+  ) !important;
+  background: linear-gradient(
+    to right,
+    rgba(240, 248, 255, 0.4) 0%,
+    rgba(240, 248, 255, 0.25) 50%,
+    rgba(240, 248, 255, 0.1) 100%
+  ) !important;
+}
+
+.ant-modal-body {
+  background-image: url("assets/background.jpg") !important;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-size: cover !important;
 }
 
 .ant-card {
@@ -93,52 +150,6 @@
   color: yellow !important;
 }
 
-.ant-tabs-tab {
-  font-size: 13px !important;
-  padding: 8px !important;
-  width: 200px !important;
-  margin: auto !important;
-  display: inline-block !important;
-  text-align: center !important;
-}
-
-.ant-tabs-tab-active {
-  border-radius: 2px !important;
-  background: rgba(240, 248, 255, 0.1) !important;
-  background: -moz-linear-gradient(
-    left,
-    rgba(240, 248, 255, 0.45) 0%,
-    rgba(240, 248, 255, 0.25) 50%,
-    rgba(240, 248, 255, 0.1) 100%
-  ) !important;
-  background: -webkit-linear-gradient(
-    left,
-    rgba(240, 248, 255, 0.45) 0%,
-    rgba(240, 248, 255, 0.25) 50%,
-    rgba(240, 248, 255, 0.1) 100%
-  ) !important;
-  background: linear-gradient(
-    to right,
-    rgba(240, 248, 255, 0.45) 0%,
-    rgba(240, 248, 255, 0.25) 50%,
-    rgba(240, 248, 255, 0.1) 100%
-  ) !important;
-}
-
-.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
-  color: #ffffff !important;
-}
-
-.ant-tabs-top > .ant-tabs-nav::before {
-  border-bottom: none !important;
-}
-.ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar {
-  width: 0% !important;
-}
-.ant-tabs > .ant-tabs-nav .ant-tabs-nav-list {
-  margin: 0px !important;
-}
-
 .ant-alert-warning {
   width: -webkit-fill-available !important;
 }
@@ -160,6 +171,10 @@ input::placeholder {
   color: rgba(255, 255, 255, 0.836) !important;
 }
 
+.ant-table {
+  background: transparent !important;
+}
+
 .ant-table.ant-table-middle {
   background-color: transparent !important;
   font-size: 13px !important;
@@ -178,18 +193,6 @@ input::placeholder {
   top: 40% !important;
   height: 1.4em !important;
   background-color: transparent !important;
-}
-
-.ant-modal-body {
-  background-image: url("assets/background.jpg") !important;
-  -webkit-background-size: cover !important;
-  -moz-background-size: cover !important;
-  -o-background-size: cover !important;
-  background-size: cover !important;
-}
-
-.ant-table {
-  background: transparent !important;
 }
 
 .ant-upload.ant-upload-select-picture-card {
